--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ body::before {
     z-index: -1; /* İçeriğin arkasında kalması için */
     
     /* Arka plan görseli ayarları */
-    background-image: url('images/arka-plan-deseni.jpg');
-    background-repeat: repeat; /* Desen olarak tekrarla */
+   background-image: url('arka-plan-deseni.jpg'); /* 'images/' kısmı silindi */
+   background-repeat: repeat;
     background-size: auto; /* Orijinal boyutunu koru */
     background-position: top left; /* Başlangıç noktası */
     
@@ -336,4 +336,5 @@ nav a:hover {
     background-color: var(--color-secondary);
     color: var(--color-white);
 }
+
 
